fix (all) header shifts from page to page

--- a/app/assets/stylesheets/components/logo.scss
+++ b/app/assets/stylesheets/components/logo.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 
   &, & * {
     text-transform: lowercase;
